FIX on logo on mobile; FIX style on cache concent

--- a/src/index.css
+++ b/src/index.css
@@ -178,3 +178,7 @@
     width: 25rem;
     left: 0.5%!important
 }
+
+body{
+    background-color: #24324f;
+}
